# mnemos

./: .gitignore  CLAUDE.md  LICENSE  README.md  belief_extractor.py  mnemos_lite.py  mnemos_session.py  mnemos_session.py.bak  pyproject.toml  sequence_results.md  verify.py
.github/workflows/: ci.yml
docs/: architecture.md  context_semantics.md  failure_modes.md  sequence_results.md  simulation.md  where_mnemos_misreads_humans.md
mnemos_memory/: user_profile.json
mnemos_sessions/: session_20260410_075547.json  session_20260411_075049.json  session_20260411_080721.json  session_20260411_082040.json  session_20260411_092410.json  session_20260411_111941.json  session_20260411_120623.json  session_20260411_180146.json  session_20260411_190759.json  session_20260411_194414.json  session_20260411_222600.json  session_20260411_225712.json  session_20260411_231215.json  session_20260411_232222.json  session_20260412_043527.json  session_20260412_045251.json  session_20260412_050907.json  session_20260412_052528.json
tests/: test_regression.py
